Fix z-index of sticky header in drawer

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -48,6 +48,7 @@
     padding-top: $spv-inner--small;
     position: sticky;
     top: 0;
+    z-index: 1;
   }
 
   .p-side-navigation__toggle,
